--- a/conesieee/src/components/Registro/USAC/usac.css
+++ b/conesieee/src/components/Registro/USAC/usac.css
@@ -1,4 +1,4 @@
-.caja-registro {
+.caja-registro-usac {
     background-image: linear-gradient(to right, #84fab0, #8fd3f4);
     width: 100%;
     height: 100%;
@@ -14,7 +14,7 @@ h1 {
     padding-top: 3%;
 }
 
-h2 {
+.caja-registro-usac h2 {
     font-size: 30px;
     font-family: sans-serif;
     font-weight: bold;
