--- a/conesieee-app/client/src/components/Registro/OtrasUniversidades/otros.css
+++ b/conesieee-app/client/src/components/Registro/OtrasUniversidades/otros.css
@@ -47,7 +47,15 @@ h2 {
 .btn-enviar-reg:hover {
     background-image: linear-gradient(to right, #ffecd2, #fcb69f);
 }
-
+.conf-otros{
+    background-image: linear-gradient(to right, #84fab0, #8fd3f4);
+    border-color: black;
+    width: 50%;
+    height: 10%;
+    font-size: 30px;
+    left:25%;
+    text-align: center
+}
 @media all and (max-width: 500px) {
     .in-texto-reg,
     .combobox,
@@ -61,5 +69,12 @@ h2 {
     }
     .btn-enviar-reg {
         width: 80%;
+    }
+    .conf-otros{
+        width: 80%;
+        height: 10%;
+        font-size: 30px;
+        left:10%;
+        padding-bottom: 5%;
     }
 }
